    * debian/patches/glibc235-localedata-locales.dpatch: New file, to fix
      mn_MN and sid_ET localedef breakage.  (Closes: #321634)

    * debian/sysdeps/powerpc.mk: Enable PowerPC NPTL.
      (Closes: #246689, #307984)

    * debian/FAQ: Add the description about dropping __ctype_* symbol support
      of static linked application/libraries in etch.  (Closes: #324526)

    * Michael Banck <mbanck@debian.org>:
      - debian/patches/glibc235-gcc4-hurd.dpatch: New file, to build glibc
        on Hurd with gcc-4.0.  (Closes: #324549)

 -- GOTO Masanori <gotom@debian.org>  Sun, 21 Aug 2005 12:33:42 +0900

glibc (2.3.5-4) unstable; urgency=low

  * The "hppa is important to someone, really - LaMont" release.

  * GOTO Masanori <gotom@debian.org>

    * d-i wants to remove libnss-files-udeb and libnss-dns-udeb dependency
      from libc-udeb.  Suggested by Joey Hess <joeyh@debian.org>.
      (Closes: #322506)
      - debian/control.in/libc: Remove libnss-files-udeb libnss-dns-udeb
        dependency.
      - debian/control: Update.

    * Build-Depends fixes:
      - debian/control.in/main: Change gcc-* dependency from | to ,.
        Suggested by Andreas Jochens <aj@andaco.de>.
      - debian/control.in/main: Add gcc-4.0 (>= 4.0.1-5) [hppa], because prior
        versions cannot generate sane glibc binaries.
      - debian/control: Update.

    * Enable libnss upgrade guard again.
      (Closes: #321561, #321712, #321796, #322768, #323560)
      - debian/debhelper.in/libc.preinst: Change guard to 2.3.5-1.
      - debian/debhelper.in/libc.postinst: Likewise.
      - debian/debhelper.in/libc.postinst: Fix to invoke NSS check again.

    * debian/debhelper.in/nscd.dirs: Add /var/db/nscd.
      (Closes: #323352, #323487)

    * debian/debhelper.in/locales.prerm: Add purge to remove locale-archive.
      (Closes: #321719)

    * debian/patches/00list: Drop glibc234-hppa-remove-mallocdef.dpatch.