@@ -28,6 +28,9 @@ glibc (2.3.5-5) unstable; urgency=low
     * debian/FAQ: Add the description about dropping __ctype_* symbol support
       of static linked application/libraries in etch.  (Closes: #324526)
 
+    * debian/sysdeps/linux.mk: Check SETNJOBS environment variable to specify
+      the number of parallel make by users.
+
     * Michael Banck <mbanck@debian.org>:
       - debian/patches/glibc235-gcc4-hurd.dpatch: New file, to build glibc
         on Hurd with gcc-4.0.  (Closes: #324549)
